Fix review images and hedline spacings

--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -195,5 +195,5 @@ summary {
 
 .letter-spacing {
   letter-spacing: 2px;
-  font-weight: 500;
+  font-weight: 500 !important;
 }
