--- a/src/assets/styles/mediaQueries.scss
+++ b/src/assets/styles/mediaQueries.scss
@@ -122,7 +122,7 @@
 
   #reviews {
     .review-card {
-      padding: 35px;
+      padding: 45px 35px;
       border-radius: 25px;
 
       .card-img {
@@ -145,7 +145,6 @@
 
     div.flex-items {
       &.back-cont {
-        // @include flex(row, stretch, stretch, 0);
 
         .back {
           height: 100%;
@@ -157,8 +156,13 @@
       position: absolute;
       width: 80%;
       bottom: 10%;
-      left: 0;
+      left: 4%;
       z-index: 1000000;
+      padding: 25px;
+
+      .btn2 {
+        padding: 12px;
+      }
     }
 
     .headline-text {
@@ -168,7 +172,17 @@
 }
 
 @media only screen and (min-width: 1366px) {
-  .header .headline div.flex-items .heading1 {
-    @include font(65px, 80px, 600);
+  .header .headline {
+    div.flex-items .heading1 {
+      @include font(65px, 80px, 600);
+    }
+
+    .float {
+      gap: 90px;
+    }
+
+    .headline-text {
+      padding-bottom: 200px;
+    }
   }
 }
